[gd_scene load_steps=4 format=3 uid="uid://b2qjo1f4rl1s4"]

[ext_resource type="Script" path="res://Scripts/Logic/MinResizeWindow.gd" id="1_4p1ds"]
[ext_resource type="Script" path="res://Scripts/Gutscha.gd" id="1_b4o6n"]
[ext_resource type="Texture2D" uid="uid://dbymi8a7pd0" path="res://Sprites/lil Fish.png" id="2_to280"]

[node name="Gutscha" type="Node2D"]
script = ExtResource("1_b4o6n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4p1ds")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PityAndBanners" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 1.0
value = 9.0
fill_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners"]
clip_contents = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VFlowContainer" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="GutType1" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Freshwater Fish"
autowrap_mode = 3

[node name="GutType2" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Deepsea Fish"
autowrap_mode = 3

[node name="GutType3" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Koi"
autowrap_mode = 3

[node name="GutType4" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Freshwater Fish"
autowrap_mode = 3

[node name="GutType5" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Deepsea Fish"
autowrap_mode = 3

[node name="GutType6" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Koi"
autowrap_mode = 3

[node name="GutType7" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Freshwater Fish"
autowrap_mode = 3

[node name="GutType8" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Deepsea Fish"
autowrap_mode = 3

[node name="GutType9" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Koi"
autowrap_mode = 3

[node name="GutType10" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Freshwater Fish"
autowrap_mode = 3

[node name="GutType11" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Deepsea Fish"
autowrap_mode = 3

[node name="GutType12" type="Button" parent="CanvasLayer/Control/HBoxContainer/PityAndBanners/ScrollContainer/VFlowContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
keep_pressed_outside = true
text = "Koi"
autowrap_mode = 3

[node name="Gutting" type="BoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
vertical = true

[node name="FishCounter" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer/Gutting"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Icon" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer/Gutting/FishCounter"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_to280")
expand_mode = 1

[node name="FishCounterTxt" type="Label" parent="CanvasLayer/Control/HBoxContainer/Gutting/FishCounter"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "179"

[node name="MultiBonus" type="Label" parent="CanvasLayer/Control/HBoxContainer/Gutting"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Gut {multi} fish at once to get 1 {prize} guaranteed!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MultiGut" type="Button" parent="CanvasLayer/Control/HBoxContainer/Gutting"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Gut x{multi}"

[node name="SingleGut" type="Button" parent="CanvasLayer/Control/HBoxContainer/Gutting"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Gut x1"